apps/nixery/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nixery
  namespace: nixery
  labels:
    app: nixery
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: nixery
